// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calling without \`outputFile\` returns the generated api 1`] = `
import { api } from './fixtures/emptyApi';
const injectedRtkApi = api.injectEndpoints({
  endpoints: (build) => ({
    getHealthcheck: build.query<GetHealthcheckApiResponse, GetHealthcheckApiArg>({
      query: () => ({ url: \`/healthcheck\` }),
    }),
    updatePet: build.mutation<UpdatePetApiResponse, UpdatePetApiArg>({
      query: (queryArg) => ({ url: \`/pet\`, method: 'PUT', body: queryArg.pet }),
    }),
    addPet: build.mutation<AddPetApiResponse, AddPetApiArg>({
      query: (queryArg) => ({
        url: \`/pet\`,
        method: 'POST',
        body: queryArg.pet,
      }),
    }),
    findPetsByStatus: build.query<FindPetsByStatusApiResponse, FindPetsByStatusApiArg>({
      query: (queryArg) => ({
        url: \`/pet/findByStatus\`,
        params: { status: queryArg.status },
      }),
    }),
    findPetsByTags: build.query<FindPetsByTagsApiResponse, FindPetsByTagsApiArg>({
      query: (queryArg) => ({
        url: \`/pet/findByTags\`,
        params: { tags: queryArg.tags },
      }),
    }),
    getPetById: build.query<GetPetByIdApiResponse, GetPetByIdApiArg>({
      query: (queryArg) => ({ url: \`/pet/\${queryArg.petId}\` }),
    }),
    updatePetWithForm: build.mutation<UpdatePetWithFormApiResponse, UpdatePetWithFormApiArg>({
      query: (queryArg) => ({
        url: \`/pet/\${queryArg.petId}\`,
        method: 'POST',
        params: { name: queryArg.name, status: queryArg.status },
      }),
    }),
    deletePet: build.mutation<DeletePetApiResponse, DeletePetApiArg>({
      query: (queryArg) => ({
        url: \`/pet/\${queryArg.petId}\`,
        method: 'DELETE',
        headers: { api_key: queryArg.apiKey },
      }),
    }),
    uploadFile: build.mutation<UploadFileApiResponse, UploadFileApiArg>({
      query: (queryArg) => ({
        url: \`/pet/\${queryArg.petId}/uploadImage\`,
        method: 'POST',
        body: queryArg.body,
        params: { additionalMetadata: queryArg.additionalMetadata },
      }),
    }),
    getInventory: build.query<GetInventoryApiResponse, GetInventoryApiArg>({
      query: () => ({ url: \`/store/inventory\` }),
    }),
    placeOrder: build.mutation<PlaceOrderApiResponse, PlaceOrderApiArg>({
      query: (queryArg) => ({
        url: \`/store/order\`,
        method: 'POST',
        body: queryArg.order,
      }),
    }),
    getOrderById: build.query<GetOrderByIdApiResponse, GetOrderByIdApiArg>({
      query: (queryArg) => ({ url: \`/store/order/\${queryArg.orderId}\` }),
    }),
    deleteOrder: build.mutation<DeleteOrderApiResponse, DeleteOrderApiArg>({
      query: (queryArg) => ({
        url: \`/store/order/\${queryArg.orderId}\`,
        method: 'DELETE',
      }),
    }),
    createUser: build.mutation<CreateUserApiResponse, CreateUserApiArg>({
      query: (queryArg) => ({
        url: \`/user\`,
        method: 'POST',
        body: queryArg.user,
      }),
    }),
    createUsersWithListInput: build.mutation<CreateUsersWithListInputApiResponse, CreateUsersWithListInputApiArg>({
      query: (queryArg) => ({
        url: \`/user/createWithList\`,
        method: 'POST',
        body: queryArg.body,
      }),
    }),
    loginUser: build.query<LoginUserApiResponse, LoginUserApiArg>({
      query: (queryArg) => ({
        url: \`/user/login\`,
        params: { username: queryArg.username, password: queryArg.password },
      }),
    }),
    logoutUser: build.query<LogoutUserApiResponse, LogoutUserApiArg>({
      query: () => ({ url: \`/user/logout\` }),
    }),
    getUserByName: build.query<GetUserByNameApiResponse, GetUserByNameApiArg>({
      query: (queryArg) => ({ url: \`/user/\${queryArg.username}\` }),
    }),
    updateUser: build.mutation<UpdateUserApiResponse, UpdateUserApiArg>({
      query: (queryArg) => ({
        url: \`/user/\${queryArg.username}\`,
        method: 'PUT',
        body: queryArg.user,
      }),
    }),
    deleteUser: build.mutation<DeleteUserApiResponse, DeleteUserApiArg>({
      query: (queryArg) => ({
        url: \`/user/\${queryArg.username}\`,
        method: 'DELETE',
      }),
    }),
  }),
  overrideExisting: false,
});
export { injectedRtkApi as enhancedApi };
export type GetHealthcheckApiResponse = /** status 200 OK */ {
  message: string;
};
export type GetHealthcheckApiArg = void;
export type UpdatePetApiResponse = /** status 200 Successful operation */ Pet;
export type UpdatePetApiArg = {
  /** Update an existent pet in the store */
  pet: Pet;
};
export type AddPetApiResponse = /** status 200 Successful operation */ Pet;
export type AddPetApiArg = {
  /** Create a new pet in the store */
  pet: Pet;
};
export type FindPetsByStatusApiResponse = /** status 200 successful operation */ Pet[];
export type FindPetsByStatusApiArg = {
  /** Status values that need to be considered for filter */
  status?: 'available' | 'pending' | 'sold';
};
export type FindPetsByTagsApiResponse = /** status 200 successful operation */ Pet[];
export type FindPetsByTagsApiArg = {
  /** Tags to filter by */
  tags?: string[];
};
export type GetPetByIdApiResponse = /** status 200 successful operation */ Pet;
export type GetPetByIdApiArg = {
  /** ID of pet to return */
  petId: number;
};
export type UpdatePetWithFormApiResponse = unknown;
export type UpdatePetWithFormApiArg = {
  /** ID of pet that needs to be updated */
  petId: number;
  /** Name of pet that needs to be updated */
  name?: string;
  /** Status of pet that needs to be updated */
  status?: string;
};
export type DeletePetApiResponse = unknown;
export type DeletePetApiArg = {
  apiKey?: string;
  /** Pet id to delete */
  petId: number;
};
export type UploadFileApiResponse = /** status 200 successful operation */ ApiResponse;
export type UploadFileApiArg = {
  /** ID of pet to update */
  petId: number;
  /** Additional Metadata */
  additionalMetadata?: string;
  body: Blob;
};
export type GetInventoryApiResponse = /** status 200 successful operation */ {
  [key: string]: number;
};
export type GetInventoryApiArg = void;
export type PlaceOrderApiResponse = /** status 200 successful operation */ Order;
export type PlaceOrderApiArg = {
  order: Order;
};
export type GetOrderByIdApiResponse = /** status 200 successful operation */ Order;
export type GetOrderByIdApiArg = {
  /** ID of order that needs to be fetched */
  orderId: number;
};
export type DeleteOrderApiResponse = unknown;
export type DeleteOrderApiArg = {
  /** ID of the order that needs to be deleted */
  orderId: number;
};
export type CreateUserApiResponse = unknown;
export type CreateUserApiArg = {
  /** Created user object */
  user: User;
};
export type CreateUsersWithListInputApiResponse = /** status 200 Successful operation */ User;
export type CreateUsersWithListInputApiArg = {
  body: User[];
};
export type LoginUserApiResponse = /** status 200 successful operation */ string;
export type LoginUserApiArg = {
  /** The user name for login */
  username?: string;
  /** The password for login in clear text */
  password?: string;
};
export type LogoutUserApiResponse = unknown;
export type LogoutUserApiArg = void;
export type GetUserByNameApiResponse = /** status 200 successful operation */ User;
export type GetUserByNameApiArg = {
  /** The name that needs to be fetched. Use user1 for testing.  */
  username: string;
};
export type UpdateUserApiResponse = unknown;
export type UpdateUserApiArg = {
  /** name that need to be deleted */
  username: string;
  /** Update an existent user in the store */
  user: User;
};
export type DeleteUserApiResponse = unknown;
export type DeleteUserApiArg = {
  /** The name that needs to be deleted */
  username: string;
};
export type Category = {
  id?: number | undefined;
  name?: string | undefined;
};
export type Tag = {
  id?: number | undefined;
  name?: string | undefined;
};
export type Pet = {
  id?: number | undefined;
  name: string;
  category?: Category | undefined;
  photoUrls: string[];
  tags?: Tag[] | undefined;
  status?: ('available' | 'pending' | 'sold') | undefined;
};
export type ApiResponse = {
  code?: number | undefined;
  type?: string | undefined;
  message?: string | undefined;
};
export type Order = {
  id?: number | undefined;
  petId?: number | undefined;
  quantity?: number | undefined;
  shipDate?: string | undefined;
  status?: ('placed' | 'approved' | 'delivered') | undefined;
  complete?: boolean | undefined;
};
export type User = {
  id?: number | undefined;
  username?: string | undefined;
  firstName?: string | undefined;
  lastName?: string | undefined;
  email?: string | undefined;
  password?: string | undefined;
  phone?: string | undefined;
  userStatus?: number | undefined;
};

`;

exports[`endpoint filtering: should only have endpoints loginUser, placeOrder, getOrderById, deleteOrder 1`] = `
import { api } from './fixtures/emptyApi';
const injectedRtkApi = api.injectEndpoints({
  endpoints: (build) => ({
    placeOrder: build.mutation<PlaceOrderApiResponse, PlaceOrderApiArg>({
      query: (queryArg) => ({
        url: \`/store/order\`,
        method: 'POST',
        body: queryArg.order,
      }),
    }),
    getOrderById: build.query<GetOrderByIdApiResponse, GetOrderByIdApiArg>({
      query: (queryArg) => ({ url: \`/store/order/\${queryArg.orderId}\` }),
    }),
    deleteOrder: build.mutation<DeleteOrderApiResponse, DeleteOrderApiArg>({
      query: (queryArg) => ({
        url: \`/store/order/\${queryArg.orderId}\`,
        method: 'DELETE',
      }),
    }),
    loginUser: build.query<LoginUserApiResponse, LoginUserApiArg>({
      query: (queryArg) => ({
        url: \`/user/login\`,
        params: { username: queryArg.username, password: queryArg.password },
      }),
    }),
  }),
  overrideExisting: false,
});
export { injectedRtkApi as enhancedApi };
export type PlaceOrderApiResponse = /** status 200 successful operation */ Order;
export type PlaceOrderApiArg = {
  order: Order;
};
export type GetOrderByIdApiResponse = /** status 200 successful operation */ Order;
export type GetOrderByIdApiArg = {
  /** ID of order that needs to be fetched */
  orderId: number;
};
export type DeleteOrderApiResponse = unknown;
export type DeleteOrderApiArg = {
  /** ID of the order that needs to be deleted */
  orderId: number;
};
export type LoginUserApiResponse = /** status 200 successful operation */ string;
export type LoginUserApiArg = {
  /** The user name for login */
  username?: string;
  /** The password for login in clear text */
  password?: string;
};
export type Order = {
  id?: number | undefined;
  petId?: number | undefined;
  quantity?: number | undefined;
  shipDate?: string | undefined;
  status?: ('placed' | 'approved' | 'delivered') | undefined;
  complete?: boolean | undefined;
};

`;

exports[`endpoint overrides: loginUser should be a mutation 1`] = `
import { api } from './fixtures/emptyApi';
const injectedRtkApi = api.injectEndpoints({
  endpoints: (build) => ({
    loginUser: build.mutation<LoginUserApiResponse, LoginUserApiArg>({
      query: (queryArg) => ({
        url: \`/user/login\`,
        method: 'GET',
        params: { username: queryArg.username, password: queryArg.password },
      }),
    }),
  }),
  overrideExisting: false,
});
export { injectedRtkApi as enhancedApi };
export type LoginUserApiResponse = /** status 200 successful operation */ string;
export type LoginUserApiArg = {
  /** The user name for login */
  username?: string;
  /** The password for login in clear text */
  password?: string;
};

`;

exports[`hooks generation uses overrides: should generate an \`useLoginMutation\` mutation hook 1`] = `
import { api } from './fixtures/emptyApi';
const injectedRtkApi = api.injectEndpoints({
  endpoints: (build) => ({
    loginUser: build.mutation<LoginUserApiResponse, LoginUserApiArg>({
      query: (queryArg) => ({
        url: \`/user/login\`,
        method: 'GET',
        params: { username: queryArg.username, password: queryArg.password },
      }),
    }),
  }),
  overrideExisting: false,
});
export { injectedRtkApi as enhancedApi };
export type LoginUserApiResponse = /** status 200 successful operation */ string;
export type LoginUserApiArg = {
  /** The user name for login */
  username?: string;
  /** The password for login in clear text */
  password?: string;
};
export const { useLoginUserMutation } = injectedRtkApi;

`;

exports[`hooks generation: should generate an \`useGetPetByIdQuery\` query hook and an \`useAddPetMutation\` mutation hook 1`] = `
import { api } from './fixtures/emptyApi';
const injectedRtkApi = api.injectEndpoints({
  endpoints: (build) => ({
    addPet: build.mutation<AddPetApiResponse, AddPetApiArg>({
      query: (queryArg) => ({
        url: \`/pet\`,
        method: 'POST',
        body: queryArg.pet,
      }),
    }),
    getPetById: build.query<GetPetByIdApiResponse, GetPetByIdApiArg>({
      query: (queryArg) => ({ url: \`/pet/\${queryArg.petId}\` }),
    }),
  }),
  overrideExisting: false,
});
export { injectedRtkApi as enhancedApi };
export type AddPetApiResponse = /** status 200 Successful operation */ Pet;
export type AddPetApiArg = {
  /** Create a new pet in the store */
  pet: Pet;
};
export type GetPetByIdApiResponse = /** status 200 successful operation */ Pet;
export type GetPetByIdApiArg = {
  /** ID of pet to return */
  petId: number;
};
export type Category = {
  id?: number | undefined;
  name?: string | undefined;
};
export type Tag = {
  id?: number | undefined;
  name?: string | undefined;
};
export type Pet = {
  id?: number | undefined;
  name: string;
  category?: Category | undefined;
  photoUrls: string[];
  tags?: Tag[] | undefined;
  status?: ('available' | 'pending' | 'sold') | undefined;
};
export const { useAddPetMutation, useGetPetByIdQuery } = injectedRtkApi;

`;

exports[`should use brackets in a querystring urls arg, when the arg contains full stops 1`] = `
import { api } from './fixtures/emptyApi';
const injectedRtkApi = api.injectEndpoints({
  endpoints: (build) => ({
    patchApiV1ListByItemId: build.mutation<PatchApiV1ListByItemIdApiResponse, PatchApiV1ListByItemIdApiArg>({
      query: (queryArg) => ({
        url: \`/api/v1/list/\${queryArg['item.id']}\`,
        method: 'PATCH',
      }),
    }),
  }),
  overrideExisting: false,
});
export { injectedRtkApi as enhancedApi };
export type PatchApiV1ListByItemIdApiResponse = /** status 200 A successful response. */ string;
export type PatchApiV1ListByItemIdApiArg = {
  'item.id': string;
};

`;

exports[`supports granular hooks generation that includes all query types 1`] = `
import { api } from './fixtures/emptyApi';
const injectedRtkApi = api.injectEndpoints({
  endpoints: (build) => ({
    addPet: build.mutation<AddPetApiResponse, AddPetApiArg>({
      query: (queryArg) => ({
        url: \`/pet\`,
        method: 'POST',
        body: queryArg.pet,
      }),
    }),
    getPetById: build.query<GetPetByIdApiResponse, GetPetByIdApiArg>({
      query: (queryArg) => ({ url: \`/pet/\${queryArg.petId}\` }),
    }),
  }),
  overrideExisting: false,
});
export { injectedRtkApi as enhancedApi };
export type AddPetApiResponse = /** status 200 Successful operation */ Pet;
export type AddPetApiArg = {
  /** Create a new pet in the store */
  pet: Pet;
};
export type GetPetByIdApiResponse = /** status 200 successful operation */ Pet;
export type GetPetByIdApiArg = {
  /** ID of pet to return */
  petId: number;
};
export type Category = {
  id?: number;
  name?: string;
};
export type Tag = {
  id?: number;
  name?: string;
};
export type Pet = {
  id?: number;
  name: string;
  category?: Category;
  photoUrls: string[];
  tags?: Tag[];
  status?: 'available' | 'pending' | 'sold';
};
export const { useAddPetMutation, useGetPetByIdQuery, useLazyGetPetByIdQuery } = injectedRtkApi;

`;

exports[`supports granular hooks generation with only lazy queries 1`] = `
import { api } from './fixtures/emptyApi';
const injectedRtkApi = api.injectEndpoints({
  endpoints: (build) => ({
    addPet: build.mutation<AddPetApiResponse, AddPetApiArg>({
      query: (queryArg) => ({
        url: \`/pet\`,
        method: 'POST',
        body: queryArg.pet,
      }),
    }),
    getPetById: build.query<GetPetByIdApiResponse, GetPetByIdApiArg>({
      query: (queryArg) => ({ url: \`/pet/\${queryArg.petId}\` }),
    }),
  }),
  overrideExisting: false,
});
export { injectedRtkApi as enhancedApi };
export type AddPetApiResponse = /** status 200 Successful operation */ Pet;
export type AddPetApiArg = {
  /** Create a new pet in the store */
  pet: Pet;
};
export type GetPetByIdApiResponse = /** status 200 successful operation */ Pet;
export type GetPetByIdApiArg = {
  /** ID of pet to return */
  petId: number;
};
export type Category = {
  id?: number;
  name?: string;
};
export type Tag = {
  id?: number;
  name?: string;
};
export type Pet = {
  id?: number;
  name: string;
  category?: Category;
  photoUrls: string[];
  tags?: Tag[];
  status?: 'available' | 'pending' | 'sold';
};
export const { useLazyGetPetByIdQuery } = injectedRtkApi;

`;

exports[`supports granular hooks generation with only mutations 1`] = `
import { api } from './fixtures/emptyApi';
const injectedRtkApi = api.injectEndpoints({
  endpoints: (build) => ({
    addPet: build.mutation<AddPetApiResponse, AddPetApiArg>({
      query: (queryArg) => ({
        url: \`/pet\`,
        method: 'POST',
        body: queryArg.pet,
      }),
    }),
    getPetById: build.query<GetPetByIdApiResponse, GetPetByIdApiArg>({
      query: (queryArg) => ({ url: \`/pet/\${queryArg.petId}\` }),
    }),
  }),
  overrideExisting: false,
});
export { injectedRtkApi as enhancedApi };
export type AddPetApiResponse = /** status 200 Successful operation */ Pet;
export type AddPetApiArg = {
  /** Create a new pet in the store */
  pet: Pet;
};
export type GetPetByIdApiResponse = /** status 200 successful operation */ Pet;
export type GetPetByIdApiArg = {
  /** ID of pet to return */
  petId: number;
};
export type Category = {
  id?: number;
  name?: string;
};
export type Tag = {
  id?: number;
  name?: string;
};
export type Pet = {
  id?: number;
  name: string;
  category?: Category;
  photoUrls: string[];
  tags?: Tag[];
  status?: 'available' | 'pending' | 'sold';
};
export const { useAddPetMutation } = injectedRtkApi;

`;

exports[`supports granular hooks generation with only queries 1`] = `
import { api } from './fixtures/emptyApi';
const injectedRtkApi = api.injectEndpoints({
  endpoints: (build) => ({
    addPet: build.mutation<AddPetApiResponse, AddPetApiArg>({
      query: (queryArg) => ({
        url: \`/pet\`,
        method: 'POST',
        body: queryArg.pet,
      }),
    }),
    getPetById: build.query<GetPetByIdApiResponse, GetPetByIdApiArg>({
      query: (queryArg) => ({ url: \`/pet/\${queryArg.petId}\` }),
    }),
  }),
  overrideExisting: false,
});
export { injectedRtkApi as enhancedApi };
export type AddPetApiResponse = /** status 200 Successful operation */ Pet;
export type AddPetApiArg = {
  /** Create a new pet in the store */
  pet: Pet;
};
export type GetPetByIdApiResponse = /** status 200 successful operation */ Pet;
export type GetPetByIdApiArg = {
  /** ID of pet to return */
  petId: number;
};
export type Category = {
  id?: number;
  name?: string;
};
export type Tag = {
  id?: number;
  name?: string;
};
export type Pet = {
  id?: number;
  name: string;
  category?: Category;
  photoUrls: string[];
  tags?: Tag[];
  status?: 'available' | 'pending' | 'sold';
};
export const { useGetPetByIdQuery } = injectedRtkApi;

`;

exports[`tests from issues issue #2002: should be able to generate proper intersection types 1`] = `
import { api } from './tmp/emptyApi';
const injectedRtkApi = api.injectEndpoints({
  endpoints: (build) => ({
    getApiV1Animals: build.query<GetApiV1AnimalsApiResponse, GetApiV1AnimalsApiArg>({
      query: (queryArg) => ({
        url: \`/api/v1/animals\`,
        params: { type: queryArg['type'] },
      }),
    }),
  }),
  overrideExisting: false,
});
export { injectedRtkApi as enhancedApi };
export type GetApiV1AnimalsApiResponse = /** status 200 Success */ (Dog | Cat)[];
export type GetApiV1AnimalsApiArg = {
  type?: AnimalType;
};
export type AnimalType = 'All' | 'Cats' | 'Dogs';
export type Animal = {
  type: AnimalType;
  id?: number;
  name?: string | null;
};
export type Dog = Animal & {
  dogUniqueProp?: string | null;
};
export type Cat = Animal & {
  catUniqueProp?: string | null;
};
export const { useGetApiV1AnimalsQuery } = injectedRtkApi;

`;

exports[`yaml parsing should be able to use read a yaml file 1`] = `
import { api } from './tmp/emptyApi';
export const addTagTypes = ['pet', 'store', 'user'] as const;
const injectedRtkApi = api
  .enhanceEndpoints({
    addTagTypes,
  })
  .injectEndpoints({
    endpoints: (build) => ({
      updatePet: build.mutation<UpdatePetApiResponse, UpdatePetApiArg>({
        query: (queryArg) => ({
          url: \`/pet\`,
          method: 'PUT',
          body: queryArg.pet,
        }),
        invalidatesTags: ['pet'],
      }),
      addPet: build.mutation<AddPetApiResponse, AddPetApiArg>({
        query: (queryArg) => ({
          url: \`/pet\`,
          method: 'POST',
          body: queryArg.pet,
        }),
        invalidatesTags: ['pet'],
      }),
      findPetsByStatus: build.query<FindPetsByStatusApiResponse, FindPetsByStatusApiArg>({
        query: (queryArg) => ({
          url: \`/pet/findByStatus\`,
          params: { status: queryArg.status },
        }),
        providesTags: ['pet'],
      }),
      findPetsByTags: build.query<FindPetsByTagsApiResponse, FindPetsByTagsApiArg>({
        query: (queryArg) => ({
          url: \`/pet/findByTags\`,
          params: { tags: queryArg.tags },
        }),
        providesTags: ['pet'],
      }),
      getPetById: build.query<GetPetByIdApiResponse, GetPetByIdApiArg>({
        query: (queryArg) => ({ url: \`/pet/\${queryArg.petId}\` }),
        providesTags: ['pet'],
      }),
      updatePetWithForm: build.mutation<UpdatePetWithFormApiResponse, UpdatePetWithFormApiArg>({
        query: (queryArg) => ({
          url: \`/pet/\${queryArg.petId}\`,
          method: 'POST',
          params: { name: queryArg.name, status: queryArg.status },
        }),
        invalidatesTags: ['pet'],
      }),
      deletePet: build.mutation<DeletePetApiResponse, DeletePetApiArg>({
        query: (queryArg) => ({
          url: \`/pet/\${queryArg.petId}\`,
          method: 'DELETE',
          headers: { api_key: queryArg.apiKey },
        }),
        invalidatesTags: ['pet'],
      }),
      uploadFile: build.mutation<UploadFileApiResponse, UploadFileApiArg>({
        query: (queryArg) => ({
          url: \`/pet/\${queryArg.petId}/uploadImage\`,
          method: 'POST',
          body: queryArg.body,
          params: { additionalMetadata: queryArg.additionalMetadata },
        }),
        invalidatesTags: ['pet'],
      }),
      getInventory: build.query<GetInventoryApiResponse, GetInventoryApiArg>({
        query: () => ({ url: \`/store/inventory\` }),
        providesTags: ['store'],
      }),
      placeOrder: build.mutation<PlaceOrderApiResponse, PlaceOrderApiArg>({
        query: (queryArg) => ({
          url: \`/store/order\`,
          method: 'POST',
          body: queryArg.order,
        }),
        invalidatesTags: ['store'],
      }),
      getOrderById: build.query<GetOrderByIdApiResponse, GetOrderByIdApiArg>({
        query: (queryArg) => ({ url: \`/store/order/\${queryArg.orderId}\` }),
        providesTags: ['store'],
      }),
      deleteOrder: build.mutation<DeleteOrderApiResponse, DeleteOrderApiArg>({
        query: (queryArg) => ({
          url: \`/store/order/\${queryArg.orderId}\`,
          method: 'DELETE',
        }),
        invalidatesTags: ['store'],
      }),
      createUser: build.mutation<CreateUserApiResponse, CreateUserApiArg>({
        query: (queryArg) => ({
          url: \`/user\`,
          method: 'POST',
          body: queryArg.user,
        }),
        invalidatesTags: ['user'],
      }),
      createUsersWithListInput: build.mutation<CreateUsersWithListInputApiResponse, CreateUsersWithListInputApiArg>({
        query: (queryArg) => ({
          url: \`/user/createWithList\`,
          method: 'POST',
          body: queryArg.body,
        }),
        invalidatesTags: ['user'],
      }),
      loginUser: build.query<LoginUserApiResponse, LoginUserApiArg>({
        query: (queryArg) => ({
          url: \`/user/login\`,
          params: { username: queryArg.username, password: queryArg.password },
        }),
        providesTags: ['user'],
      }),
      logoutUser: build.query<LogoutUserApiResponse, LogoutUserApiArg>({
        query: () => ({ url: \`/user/logout\` }),
        providesTags: ['user'],
      }),
      getUserByName: build.query<GetUserByNameApiResponse, GetUserByNameApiArg>({
        query: (queryArg) => ({ url: \`/user/\${queryArg.username}\` }),
        providesTags: ['user'],
      }),
      updateUser: build.mutation<UpdateUserApiResponse, UpdateUserApiArg>({
        query: (queryArg) => ({
          url: \`/user/\${queryArg.username}\`,
          method: 'PUT',
          body: queryArg.user,
        }),
        invalidatesTags: ['user'],
      }),
      deleteUser: build.mutation<DeleteUserApiResponse, DeleteUserApiArg>({
        query: (queryArg) => ({
          url: \`/user/\${queryArg.username}\`,
          method: 'DELETE',
        }),
        invalidatesTags: ['user'],
      }),
    }),
    overrideExisting: false,
  });
export { injectedRtkApi as enhancedApi };
export type UpdatePetApiResponse = /** status 200 Successful operation */ Pet;
export type UpdatePetApiArg = {
  /** Update an existent pet in the store */
  pet: Pet;
};
export type AddPetApiResponse = /** status 200 Successful operation */ Pet;
export type AddPetApiArg = {
  /** Create a new pet in the store */
  pet: Pet;
};
export type FindPetsByStatusApiResponse = /** status 200 successful operation */ Pet[];
export type FindPetsByStatusApiArg = {
  /** Status values that need to be considered for filter */
  status?: 'available' | 'pending' | 'sold';
};
export type FindPetsByTagsApiResponse = /** status 200 successful operation */ Pet[];
export type FindPetsByTagsApiArg = {
  /** Tags to filter by */
  tags?: string[];
};
export type GetPetByIdApiResponse = /** status 200 successful operation */ Pet;
export type GetPetByIdApiArg = {
  /** ID of pet to return */
  petId: number;
};
export type UpdatePetWithFormApiResponse = unknown;
export type UpdatePetWithFormApiArg = {
  /** ID of pet that needs to be updated */
  petId: number;
  /** Name of pet that needs to be updated */
  name?: string;
  /** Status of pet that needs to be updated */
  status?: string;
};
export type DeletePetApiResponse = unknown;
export type DeletePetApiArg = {
  apiKey?: string;
  /** Pet id to delete */
  petId: number;
};
export type UploadFileApiResponse = /** status 200 successful operation */ ApiResponse;
export type UploadFileApiArg = {
  /** ID of pet to update */
  petId: number;
  /** Additional Metadata */
  additionalMetadata?: string;
  body: Blob;
};
export type GetInventoryApiResponse = /** status 200 successful operation */ {
  [key: string]: number;
};
export type GetInventoryApiArg = void;
export type PlaceOrderApiResponse = /** status 200 successful operation */ Order;
export type PlaceOrderApiArg = {
  order: Order;
};
export type GetOrderByIdApiResponse = /** status 200 successful operation */ Order;
export type GetOrderByIdApiArg = {
  /** ID of order that needs to be fetched */
  orderId: number;
};
export type DeleteOrderApiResponse = unknown;
export type DeleteOrderApiArg = {
  /** ID of the order that needs to be deleted */
  orderId: number;
};
export type CreateUserApiResponse = unknown;
export type CreateUserApiArg = {
  /** Created user object */
  user: User;
};
export type CreateUsersWithListInputApiResponse = /** status 200 Successful operation */ User;
export type CreateUsersWithListInputApiArg = {
  body: User[];
};
export type LoginUserApiResponse = /** status 200 successful operation */ string;
export type LoginUserApiArg = {
  /** The user name for login */
  username?: string;
  /** The password for login in clear text */
  password?: string;
};
export type LogoutUserApiResponse = unknown;
export type LogoutUserApiArg = void;
export type GetUserByNameApiResponse = /** status 200 successful operation */ User;
export type GetUserByNameApiArg = {
  /** The name that needs to be fetched. Use user1 for testing.  */
  username: string;
};
export type UpdateUserApiResponse = unknown;
export type UpdateUserApiArg = {
  /** name that need to be deleted */
  username: string;
  /** Update an existent user in the store */
  user: User;
};
export type DeleteUserApiResponse = unknown;
export type DeleteUserApiArg = {
  /** The name that needs to be deleted */
  username: string;
};
export type Category = {
  id?: number | undefined;
  name?: string | undefined;
};
export type Tag = {
  id?: number | undefined;
  name?: string | undefined;
};
export type Pet = {
  id?: number | undefined;
  name: string;
  category?: Category | undefined;
  photoUrls: string[];
  tags?: Tag[] | undefined;
  status?: ('available' | 'pending' | 'sold') | undefined;
};
export type ApiResponse = {
  code?: number | undefined;
  type?: string | undefined;
  message?: string | undefined;
};
export type Order = {
  id?: number | undefined;
  petId?: number | undefined;
  quantity?: number | undefined;
  shipDate?: string | undefined;
  status?: ('placed' | 'approved' | 'delivered') | undefined;
  complete?: boolean | undefined;
};
export type User = {
  id?: number | undefined;
  username?: string | undefined;
  firstName?: string | undefined;
  lastName?: string | undefined;
  email?: string | undefined;
  password?: string | undefined;
  phone?: string | undefined;
  userStatus?: number | undefined;
};
export const {
  useUpdatePetMutation,
  useAddPetMutation,
  useFindPetsByStatusQuery,
  useFindPetsByTagsQuery,
  useGetPetByIdQuery,
  useUpdatePetWithFormMutation,
  useDeletePetMutation,
  useUploadFileMutation,
  useGetInventoryQuery,
  usePlaceOrderMutation,
  useGetOrderByIdQuery,
  useDeleteOrderMutation,
  useCreateUserMutation,
  useCreateUsersWithListInputMutation,
  useLoginUserQuery,
  useLogoutUserQuery,
  useGetUserByNameQuery,
  useUpdateUserMutation,
  useDeleteUserMutation,
} = injectedRtkApi;

`;

exports[`yaml parsing should generate params with non quoted keys if they don't contain special characters 1`] = `
import { api } from './tmp/emptyApi';
export const addTagTypes = ['StructureDefinition'] as const;
const injectedRtkApi = api
  .enhanceEndpoints({
    addTagTypes,
  })
  .injectEndpoints({
    endpoints: (build) => ({
      getStructureDefinition: build.query<GetStructureDefinitionApiResponse, GetStructureDefinitionApiArg>({
        query: (queryArg) => ({
          url: \`/StructureDefinition\`,
          params: {
            foo: queryArg.foo,
            _foo: queryArg._foo,
            '-bar-bar': queryArg['-bar-bar'],
            _bar_bar: queryArg._bar_bar,
            'foo:bar-foo.bar/foo': queryArg['foo:bar-foo.bar/foo'],
            foo_bar: queryArg.fooBar,
            namingConflict: queryArg.namingConflict,
            naming_conflict: queryArg.naming_conflict,
          },
        }),
        providesTags: ['StructureDefinition'],
      }),
    }),
    overrideExisting: false,
  });
export { injectedRtkApi as enhancedApi };
export type GetStructureDefinitionApiResponse = unknown;
export type GetStructureDefinitionApiArg = {
  /** Some description */
  foo?: any;
  /** Some description */
  _foo?: any;
  /** Some description */
  '-bar-bar'?: any;
  /** Some description */
  _bar_bar?: any;
  /** Some description */
  'foo:bar-foo.bar/foo'?: any;
  /** Some description */
  fooBar?: any;
  /** Some description */
  namingConflict?: any;
  /** Some description */
  naming_conflict?: any;
};
export const { useGetStructureDefinitionQuery } = injectedRtkApi;

`;

exports[`yaml parsing should parse a yaml schema from a URL 1`] = `
import { api } from './tmp/emptyApi';
export const addTagTypes = ['pet', 'store', 'user'] as const;
const injectedRtkApi = api
  .enhanceEndpoints({
    addTagTypes,
  })
  .injectEndpoints({
    endpoints: (build) => ({
      updatePet: build.mutation<UpdatePetApiResponse, UpdatePetApiArg>({
        query: (queryArg) => ({
          url: \`/pet\`,
          method: 'PUT',
          body: queryArg.pet,
        }),
        invalidatesTags: ['pet'],
      }),
      addPet: build.mutation<AddPetApiResponse, AddPetApiArg>({
        query: (queryArg) => ({
          url: \`/pet\`,
          method: 'POST',
          body: queryArg.pet,
        }),
        invalidatesTags: ['pet'],
      }),
      findPetsByStatus: build.query<FindPetsByStatusApiResponse, FindPetsByStatusApiArg>({
        query: (queryArg) => ({
          url: \`/pet/findByStatus\`,
          params: { status: queryArg.status },
        }),
        providesTags: ['pet'],
      }),
      findPetsByTags: build.query<FindPetsByTagsApiResponse, FindPetsByTagsApiArg>({
        query: (queryArg) => ({
          url: \`/pet/findByTags\`,
          params: { tags: queryArg.tags },
        }),
        providesTags: ['pet'],
      }),
      getPetById: build.query<GetPetByIdApiResponse, GetPetByIdApiArg>({
        query: (queryArg) => ({ url: \`/pet/\${queryArg.petId}\` }),
        providesTags: ['pet'],
      }),
      updatePetWithForm: build.mutation<UpdatePetWithFormApiResponse, UpdatePetWithFormApiArg>({
        query: (queryArg) => ({
          url: \`/pet/\${queryArg.petId}\`,
          method: 'POST',
          params: { name: queryArg.name, status: queryArg.status },
        }),
        invalidatesTags: ['pet'],
      }),
      deletePet: build.mutation<DeletePetApiResponse, DeletePetApiArg>({
        query: (queryArg) => ({
          url: \`/pet/\${queryArg.petId}\`,
          method: 'DELETE',
          headers: { api_key: queryArg.apiKey },
        }),
        invalidatesTags: ['pet'],
      }),
      uploadFile: build.mutation<UploadFileApiResponse, UploadFileApiArg>({
        query: (queryArg) => ({
          url: \`/pet/\${queryArg.petId}/uploadImage\`,
          method: 'POST',
          body: queryArg.body,
          params: { additionalMetadata: queryArg.additionalMetadata },
        }),
        invalidatesTags: ['pet'],
      }),
      getInventory: build.query<GetInventoryApiResponse, GetInventoryApiArg>({
        query: () => ({ url: \`/store/inventory\` }),
        providesTags: ['store'],
      }),
      placeOrder: build.mutation<PlaceOrderApiResponse, PlaceOrderApiArg>({
        query: (queryArg) => ({
          url: \`/store/order\`,
          method: 'POST',
          body: queryArg.order,
        }),
        invalidatesTags: ['store'],
      }),
      getOrderById: build.query<GetOrderByIdApiResponse, GetOrderByIdApiArg>({
        query: (queryArg) => ({ url: \`/store/order/\${queryArg.orderId}\` }),
        providesTags: ['store'],
      }),
      deleteOrder: build.mutation<DeleteOrderApiResponse, DeleteOrderApiArg>({
        query: (queryArg) => ({
          url: \`/store/order/\${queryArg.orderId}\`,
          method: 'DELETE',
        }),
        invalidatesTags: ['store'],
      }),
      createUser: build.mutation<CreateUserApiResponse, CreateUserApiArg>({
        query: (queryArg) => ({
          url: \`/user\`,
          method: 'POST',
          body: queryArg.user,
        }),
        invalidatesTags: ['user'],
      }),
      createUsersWithListInput: build.mutation<CreateUsersWithListInputApiResponse, CreateUsersWithListInputApiArg>({
        query: (queryArg) => ({
          url: \`/user/createWithList\`,
          method: 'POST',
          body: queryArg.body,
        }),
        invalidatesTags: ['user'],
      }),
      loginUser: build.query<LoginUserApiResponse, LoginUserApiArg>({
        query: (queryArg) => ({
          url: \`/user/login\`,
          params: { username: queryArg.username, password: queryArg.password },
        }),
        providesTags: ['user'],
      }),
      logoutUser: build.query<LogoutUserApiResponse, LogoutUserApiArg>({
        query: () => ({ url: \`/user/logout\` }),
        providesTags: ['user'],
      }),
      getUserByName: build.query<GetUserByNameApiResponse, GetUserByNameApiArg>({
        query: (queryArg) => ({ url: \`/user/\${queryArg.username}\` }),
        providesTags: ['user'],
      }),
      updateUser: build.mutation<UpdateUserApiResponse, UpdateUserApiArg>({
        query: (queryArg) => ({
          url: \`/user/\${queryArg.username}\`,
          method: 'PUT',
          body: queryArg.user,
        }),
        invalidatesTags: ['user'],
      }),
      deleteUser: build.mutation<DeleteUserApiResponse, DeleteUserApiArg>({
        query: (queryArg) => ({
          url: \`/user/\${queryArg.username}\`,
          method: 'DELETE',
        }),
        invalidatesTags: ['user'],
      }),
    }),
    overrideExisting: false,
  });
export { injectedRtkApi as enhancedApi };
export type UpdatePetApiResponse = /** status 200 Successful operation */ Pet;
export type UpdatePetApiArg = {
  /** Update an existent pet in the store */
  pet: Pet;
};
export type AddPetApiResponse = /** status 200 Successful operation */ Pet;
export type AddPetApiArg = {
  /** Create a new pet in the store */
  pet: Pet;
};
export type FindPetsByStatusApiResponse = /** status 200 successful operation */ Pet[];
export type FindPetsByStatusApiArg = {
  /** Status values that need to be considered for filter */
  status?: 'available' | 'pending' | 'sold';
};
export type FindPetsByTagsApiResponse = /** status 200 successful operation */ Pet[];
export type FindPetsByTagsApiArg = {
  /** Tags to filter by */
  tags?: string[];
};
export type GetPetByIdApiResponse = /** status 200 successful operation */ Pet;
export type GetPetByIdApiArg = {
  /** ID of pet to return */
  petId: number;
};
export type UpdatePetWithFormApiResponse = unknown;
export type UpdatePetWithFormApiArg = {
  /** ID of pet that needs to be updated */
  petId: number;
  /** Name of pet that needs to be updated */
  name?: string;
  /** Status of pet that needs to be updated */
  status?: string;
};
export type DeletePetApiResponse = unknown;
export type DeletePetApiArg = {
  apiKey?: string;
  /** Pet id to delete */
  petId: number;
};
export type UploadFileApiResponse = /** status 200 successful operation */ ApiResponse;
export type UploadFileApiArg = {
  /** ID of pet to update */
  petId: number;
  /** Additional Metadata */
  additionalMetadata?: string;
  body: Blob;
};
export type GetInventoryApiResponse = /** status 200 successful operation */ {
  [key: string]: number;
};
export type GetInventoryApiArg = void;
export type PlaceOrderApiResponse = /** status 200 successful operation */ Order;
export type PlaceOrderApiArg = {
  order: Order;
};
export type GetOrderByIdApiResponse = /** status 200 successful operation */ Order;
export type GetOrderByIdApiArg = {
  /** ID of order that needs to be fetched */
  orderId: number;
};
export type DeleteOrderApiResponse = unknown;
export type DeleteOrderApiArg = {
  /** ID of the order that needs to be deleted */
  orderId: number;
};
export type CreateUserApiResponse = unknown;
export type CreateUserApiArg = {
  /** Created user object */
  user: User;
};
export type CreateUsersWithListInputApiResponse = /** status 200 Successful operation */ User;
export type CreateUsersWithListInputApiArg = {
  body: User[];
};
export type LoginUserApiResponse = /** status 200 successful operation */ string;
export type LoginUserApiArg = {
  /** The user name for login */
  username?: string;
  /** The password for login in clear text */
  password?: string;
};
export type LogoutUserApiResponse = unknown;
export type LogoutUserApiArg = void;
export type GetUserByNameApiResponse = /** status 200 successful operation */ User;
export type GetUserByNameApiArg = {
  /** The name that needs to be fetched. Use user1 for testing.  */
  username: string;
};
export type UpdateUserApiResponse = unknown;
export type UpdateUserApiArg = {
  /** name that need to be deleted */
  username: string;
  /** Update an existent user in the store */
  user: User;
};
export type DeleteUserApiResponse = unknown;
export type DeleteUserApiArg = {
  /** The name that needs to be deleted */
  username: string;
};
export type Category = {
  id?: number | undefined;
  name?: string | undefined;
};
export type Tag = {
  id?: number | undefined;
  name?: string | undefined;
};
export type Pet = {
  id?: number | undefined;
  name: string;
  category?: Category | undefined;
  photoUrls: string[];
  tags?: Tag[] | undefined;
  status?: ('available' | 'pending' | 'sold') | undefined;
};
export type ApiResponse = {
  code?: number | undefined;
  type?: string | undefined;
  message?: string | undefined;
};
export type Order = {
  id?: number | undefined;
  petId?: number | undefined;
  quantity?: number | undefined;
  shipDate?: string | undefined;
  status?: ('placed' | 'approved' | 'delivered') | undefined;
  complete?: boolean | undefined;
};
export type User = {
  id?: number | undefined;
  username?: string | undefined;
  firstName?: string | undefined;
  lastName?: string | undefined;
  email?: string | undefined;
  password?: string | undefined;
  phone?: string | undefined;
  userStatus?: number | undefined;
};
export const {
  useUpdatePetMutation,
  useAddPetMutation,
  useFindPetsByStatusQuery,
  useFindPetsByTagsQuery,
  useGetPetByIdQuery,
  useUpdatePetWithFormMutation,
  useDeletePetMutation,
  useUploadFileMutation,
  useGetInventoryQuery,
  usePlaceOrderMutation,
  useGetOrderByIdQuery,
  useDeleteOrderMutation,
  useCreateUserMutation,
  useCreateUsersWithListInputMutation,
  useLoginUserQuery,
  useLogoutUserQuery,
  useGetUserByNameQuery,
  useUpdateUserMutation,
  useDeleteUserMutation,
} = injectedRtkApi;

`;
